--- a/package.json
+++ b/package.json
@@ -9,18 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.22.2",
+    "@aptos-labs/wallet-adapter-ant-design": "^2.6.3",
+    "@aptos-labs/wallet-adapter-react": "^3.4.3",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@identity-connect/wallet-adapter-plugin": "^1.2.5",
+    "@martianwallet/aptos-wallet-adapter": "^0.0.5",
+    "@msafe/aptos-wallet-adapter": "^1.1.3",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
+    "@pontem/wallet-adapter-plugin": "^0.2.1",
+    "@trustwallet/aptos-wallet-adapter": "^0.1.6",
+    "antd": "^5.19.1",
+    "fewcha-plugin-wallet-adapter": "^0.1.3",
+    "next": "14.2.4",
+    "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
